[Android DomKey] Swap mapping for TVInputComposite and TVInputComponent

https://crrev.com/2501083002/ introduce these mappings but mis-placed values,
this CL swaps these values back.

BUG=670587

Review-Url: https://codereview.chromium.org/2622893005
Cr-Commit-Position: refs/heads/master@{#442929}

Former-commit-id: bacc700b3d89b58024d726567a4947f05fa24af5